--- a/src/Loader/Loader.css
+++ b/src/Loader/Loader.css
@@ -22,3 +22,9 @@
         transform: rotate(360deg);
     }
 }
+
+.lds-wrapper{
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
